src-errormsg/E16-WrongVariable/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E16-WrongVariable/Plinth.hs:30:39: error: [GHC-88464]
    Variable not in scope: amount :: Integer
    Suggested fix: Perhaps use data constructor ‘Amount’ (line 16)
   |
30 |   Deduct n from -> netWithdraw from - amount
   |                                       ^^^^^^
